--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -26,6 +26,6 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
-    implementation files('lib/navx_ftc-release.aar')
+    implementation files('../libs/navx_ftc-release.aar')
 
 }
